Version 2.2.0.0
=================
bear:
Fixed a potential problem with the IAMStreamSelect GetCount() function not returning 0 value if there are no streams.
Fixed a potential problem if you have a threaded call to CTSFileSourcePin::GetAvailable() function if the FileReader class does not exist such as when reloading.

Version 2.1.1.9
=================
bear:
Fixed a bug with the TSFileSource's ITSFileSource property page Method that was stopping the page from displaying when called.
Fixed a divide by zero bug that was causing the filter to crash when you tried to run the filter with a zero duration file then tried to stop it.

Version 2.1.1.8
=================
bear:
Fixed a problem with the seeking of the filtergraph after a change of streams or files.
Fixed the problem where the video pin was not re-rendered when changing to a audio only program stream.
Added a flow rate value to the stream name in the IAMStreamSelect menu list for Network streams so you can see if they are running.
Added a restart method for the Network filtergraphs if the net data flow stops for longer than 2 seconds and then graph will close if longer than 10 seconds.
Added a ShowStreamMenu() function to the ITSFileSource interface, it will create a mouse controlled popup menu of the streams list, this has been extended to the Prop page using the mouse right click to enable stream selection.
Fixed a threading issue with the property page where it was locking up if you were to operate buttons too quickly.
Changed the look of the menu in the IAMStreamSelect Interface.
Changed the error code returned if the network graph has not data flow so applications do not try to access the filter.
Fixed an issue when the filter was used by mplayer2.exe, seems it was selecting the first stream of every group prior to playing, hence it would then select the stream that was the Browser option and opened the open file window. 