@@ -1,7 +1,8 @@
 Version 2.2.0.0
 =================
 bear:
-Fixed a potential problem with the IAMStreamSelect GetCount() function not returning 0 value if there are no streams.
+Found and fixed a few more potential divide by zero bugs.
+Fixed a bug in the MultiFileReader::Read() function where it would crash if the info array had no file-> class loaded.Fixed a potential problem with the IAMStreamSelect GetCount() function not returning 0 value if there are no streams.
 Fixed a potential problem if you have a threaded call to CTSFileSourcePin::GetAvailable() function if the FileReader class does not exist such as when reloading.
 
 Version 2.1.1.9
